navbar fixed on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
 @media screen and (max-width: 768px) {
+        div#about, .hero-sectie {
+
+                flex-direction: column;
+        
+            }
+
         header button.hamburger {
 
                 display: block;
@@ -30,7 +36,6 @@
         }
 
 
-
         header nav button {
 
                 width: 100%;
@@ -41,6 +46,7 @@
 
 body {
         margin: auto;
+
 }
 
 h2 {
@@ -81,6 +87,10 @@ p {
         width: 100%;
         display: flex;
         justify-content: center;
+}
+
+nav.visible {
+        display: flex;
 }
 
 .header-flexbox {
@@ -134,11 +144,7 @@ button.hamburger {
 
 }
 
-nav.visible {
 
-        display: flex;
-
-}
 
 button.hamburger {
 
